[package]
name = "watermark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
photon-rs = "0.3.2"
photon = "0.0.0"
lambda_runtime = "0.7.3"
serde = "1.0.158"
serde_json = "1.0.94"
tokio = "1.26.0"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
tracing = { version = "0.1", features = ["log"] }
aws_lambda_events = "0.7.3"
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"
urlencoding = "2.1.2"
image = "0.24.5"
